--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -4,13 +4,15 @@
     // sizing
     width: 100%;
     background-color: $bg-primary;
-    height: 40px;
+    height: 50px;
     // dispaly
     display: flex;
     justify-content: flex-end;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
     padding: 0 20px;
+    // position
+    position: sticky;
 }
 
 .navitem {
@@ -24,6 +26,32 @@
     margin: 10px 0;
     // coloring
     color: $text-secondary;
+    // cursor
+    cursor: pointer;
+}
+
+.underline {
+    // hover animation
+    display: inline-block;
+    position: relative;
+}
+
+.underline::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: $primary;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.underline:hover::after {
+    transform: scale(1);
+    transform-origin: bottom left;
 }
 
 .navitem:hover {
@@ -32,4 +60,22 @@
 
 .container > a:nth-child(2) {
     margin-left: auto;
+}
+
+.container > a:last-child {
+    border: solid 1px $primary;
+    padding: 5px;
+    border-radius: 0.35rem;
+    color: $primary;
+}
+
+.container > a:last-child {
+    border: solid 1px $primary;
+    padding: 5px;
+    border-radius: 0.35rem;
+    color: $primary;
+}
+
+.container > a:last-child:hover {
+    background-color: $bg-secondary;
 }
