--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,9 @@
-
-
 html,
 body,
-body *{
+body * {
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: Garamond, Georgia, Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -17,3 +14,4 @@ a {
 * {
     box-sizing: border-box;
 }
+ 
