--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -7,6 +7,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-top: 10%;
 }
