--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
-@import "./sections/sectionsG.scss";
+@import "./global/sections.scss";
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
 
 html,
 body,
