--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+@import "./global//text.scss";
 @import "./global/sections.scss";
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
 
@@ -6,7 +7,7 @@ body,
 body * {
     padding: 0;
     margin: 0;
-    font-family: Garamond, Georgia, Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
