--- a/styles/sections/Experiences.module.scss
+++ b/styles/sections/Experiences.module.scss
@@ -3,10 +3,12 @@
     justify-content: flex-start;
     align-items: flex-start;
     height: 100%;
+    gap: 20px;
+    background-color: green;
 }
 
 .experiences {
-    width: 25%;
+    width: 20%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -24,6 +26,7 @@
 
 .exp {
     display: flex;
+    width: 80%;
     justify-content: flex-start;
     flex-direction: column;
 }
