--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -10,6 +10,10 @@ body * {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-color: $bg-primary;
+}
+
 a {
     color: inherit;
     text-decoration: none;
