--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -8,5 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding-top: 10%;
+    margin: 25vh auto;
+
+    gap: 50vh;
 }
