--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin: 25vh auto;
+    margin: 25vh auto 50vh;
 
     gap: 50vh;
 }
