--- a/styles/misc/Navbar.module.scss
+++ b/styles/misc/Navbar.module.scss
@@ -10,7 +10,8 @@
     align-items: center;
     padding: 0 20px;
     // position
-    position: sticky;
+    position: fixed;
+    top: 0%;
 }
 
 .navitem {
@@ -36,19 +37,29 @@
 }
 
 .container > a:last-child {
-    border: solid 1px $primary;
+    border: solid 2px $primary;
     padding: 5px;
-    border-radius: 0.35rem;
-    color: $primary;
-}
-
-.container > a:last-child {
-    border: solid 1px $primary;
-    padding: 5px;
-    border-radius: 0.35rem;
+    border-radius: 0.5rem;
     color: $primary;
 }
 
 .container > a:last-child:hover {
     background-color: $bg-secondary;
+}
+
+.logo {
+    color: $primary;
+}
+.logoCont {
+    border: solid 2px $primary;
+    border-radius: 0.5rem;
+    padding: 5px;
+}
+
+.logoCont:hover {
+    background-color: $bg-secondary;
+}
+
+.logoText {
+    font-family: "Orbitron", sans-serif;
 }
