--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -1,13 +1,13 @@
 @import "./text.scss";
 @import "./sections.scss";
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@300&display=swap");
 html,
-body,
-body * {
+.root,
+.root * {
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Exo 2", sans-serif;
 }
 
 body {
