--- a/styles/misc/Footer.module.scss
+++ b/styles/misc/Footer.module.scss
@@ -10,7 +10,6 @@
 .socHold {
     display: flex;
     gap: 20px;
-
 }
 
 .footText {
@@ -32,7 +31,8 @@
     height: 75px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    
 }
 
 .socialI {
