--- a/styles/sections/Projects.module.scss
+++ b/styles/sections/Projects.module.scss
@@ -1,8 +1,8 @@
 .row {
     width: 100%;
     display: grid;
-    grid-template: "a b c" auto / 1fr 1fr 1fr;
-    height: 150px;
+    grid-template: "a b" auto / 1fr 1fr;
+    height: 200px;
     gap: 10px;
     padding-bottom: 10px;
 }
@@ -10,7 +10,23 @@
 .project {
     border: solid $primary 2px;
     border-radius: 0.75rem;
+    display: grid;
+    grid-template: "cont pict" 100% / 6fr 4fr;
+}
+
+.projC {
+    background-color: black;
+    grid-area: cont;
+    border-radius: 0.75rem 0 0 0.75rem;
     padding: 5px;
+}
+
+.projP {
+    background-color: white;
+    grid-area: pict;
+    height: 100%;
+    border-radius: 0 0.75rem 0.75rem 0;
+    object-fit: cover;
 }
 
 .project:hover {
