--- a/styles/sections/Projects.module.scss
+++ b/styles/sections/Projects.module.scss
@@ -4,11 +4,11 @@
     grid-template: "a b" auto / 1fr 1fr;
     height: 200px;
     gap: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .project {
-    border: solid $primary 2px;
+    border: solid $text-secondary 2px;
     border-radius: 0.75rem;
     display: grid;
     grid-template: "cont pict" 100% / 6fr 4fr;
@@ -92,4 +92,5 @@
     .iLink:hover {
         color: $primary-dark;
     }
+    border-color: $primary;
 }
