--- a/styles/sections/About.module.scss
+++ b/styles/sections/About.module.scss
@@ -1,7 +1,10 @@
 .container {
     display: grid;
 
-    grid-template: "txt photo" auto / 6fr 4fr;
+    grid-template:
+        "txt" auto
+        "photo" auto;
+    gap: 40px;
     box-sizing: border-box;
 }
 
@@ -10,16 +13,16 @@
     width: 90%;
     grid-area: txt;
     font-size: 16px;
-    padding: 0 20px 0;
 }
 
 .pContainer {
     box-sizing: border-box;
     grid-area: photo;
-    width: 85%;
+    width: 70vw;
+    height: 70vw;
+    justify-self: center;
     object-fit: scale-down;
-    display: flex;
-    margin: 0 30px 20px 0;
+    position: relative;
     background-color: purple;
     box-shadow: rgba(240, 46, 170, 0.4) 5px 5px,
         rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px,
@@ -27,6 +30,22 @@
 }
 
 .headshot {
-    height: 20% !important;
+    height: 40% !important;
     width: 10% !important;
+}
+
+@media only screen and (min-width: 768px) {
+    .container {
+        grid-template: "txt photo" auto / 6fr 4fr;
+        gap: 0px;
+    }
+
+    .contentText {
+        padding: 0 20px 0;
+    }
+
+    .pContainer {
+        width: 85%;
+        margin: 0 30px 20px 0;
+    }
 }
