--- a/styles/sections/Connect.module.scss
+++ b/styles/sections/Connect.module.scss
@@ -6,7 +6,7 @@
 }
 
 .formCont {
-    width: 50%;
+    width: 100%;
     height: 100%;
     gap: 10px;
     display: flex;
@@ -19,8 +19,7 @@
 }
 
 .pWrapper {
-    width: 50%;
-    height: 100%;
+    display: none;
 }
 
 .formRow {
@@ -78,4 +77,19 @@
 .submit:hover {
     background-color: $primary-dark;
     border-color: $primary-dark;
+}
+
+@media only screen and (min-width: 768px) {
+    .pWrapper {
+        height: 100%;
+        width: 100%;
+
+        width: 50%;
+        display: inline-block;
+        position: relative;
+    }
+
+    .formCont {
+        width: 50%;
+    }
 }
