--- a/styles/sections/Projects.module.scss
+++ b/styles/sections/Projects.module.scss
@@ -10,7 +10,7 @@
 }
 
 .project {
-    border: solid $text-secondary 2px;
+    border: solid $primary 2px;
     border-radius: 0.75rem;
     display: grid;
     grid-template: "cont pict" 100% / 6fr 4fr;
@@ -41,17 +41,18 @@
 
 .iLink {
     font-size: 24px;
-    color: $text-secondary;
+    color: $primary;
 }
 
 .iLink:hover {
     color: $primary-dark;
+
     cursor: pointer;
 }
 
 .cTit {
     font-size: 20px;
-    color: $text-secondary;
+    color: $text-primary;
 }
 
 .cText {
@@ -77,24 +78,8 @@
     height: 100%;
     border-radius: 0 0.75rem 0.75rem 0;
     object-fit: cover;
-    filter: grayscale(100%);
-    z-index: 0;
-}
 
-.project:hover {
-    .projP {
-        filter: grayscale(0);
-    }
-    .cTit {
-        color: $text-primary;
-    }
-    .iLink {
-        color: $primary;
-    }
-    .iLink:hover {
-        color: $primary-dark;
-    }
-    border-color: $primary;
+    z-index: 0;
 }
 
 @media only screen and (min-width: 768px) {
