--- a/styles/sections/Projects.module.scss
+++ b/styles/sections/Projects.module.scss
@@ -19,7 +19,7 @@
 .projC {
     grid-area: cont;
     border-radius: 0.75rem 0 0 0.75rem;
-    padding: 10px;
+    padding: 1vw;
     // grid tempalte
     display: flex;
     flex-direction: column;
