--- a/styles/misc/Navbar.module.scss
+++ b/styles/misc/Navbar.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     padding: 0 2vw;
     // position
-    position: fixed;
+    position: absolute;
     top: 0%;
     left: 0;
     z-index: 1;
