--- a/styles/misc/Navbar.module.scss
+++ b/styles/misc/Navbar.module.scss
@@ -25,8 +25,8 @@
 
     a:last-child {
         border: solid 0.1vw $primary;
-        padding: 0.5vw;
-        border-radius: 0.5vw;
+        padding: 0.5vh;
+        border-radius: 0.5vh;
         color: $primary;
     }
 
@@ -40,14 +40,14 @@
 
     .logoCont {
         border: solid 0.1vw $primary;
-        border-radius: 0.5vw;
-        padding: 0.5vw;
+        border-radius: 0.5vh;
+        padding: 0.5vh;
     }
 }
 
 .navitem {
     // font
-    font-size: 1vw;
+    font-size: 1.5vh;
     // bg coloring
     background-color: inherit;
     border: none;
@@ -84,11 +84,26 @@
         a:nth-child(2) {
             margin-left: auto;
         }
+
+        a:last-child {
+            border-radius: 0.5vw;
+            padding: 0.5vw;
+        }
+
+        .logoCont {
+            border-radius: 0.5vw;
+            padding: 0.5vw;
+        }
     }
 
     .logoCont {
         border: solid 0.1vw $primary;
         border-radius: 0.5vw;
         padding: 5vw;
+    }
+
+    .navitem {
+        // font
+        font-size: 1vw;
     }
 }
