--- a/styles/sections/About.module.scss
+++ b/styles/sections/About.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 2vw;
+    gap: 2vh;
     justify-content: center;
     align-items: flex-start;
     box-sizing: border-box;
@@ -12,21 +12,7 @@
     display: inline-block;
     width: 90%;
     grid-area: txt;
-    font-size: 1.5vw;
-}
-
-.pContainer {
-    box-sizing: border-box;
-    grid-area: photo;
-    width: 70vw;
-    height: 70vw;
-    justify-self: center;
-    object-fit: scale-down;
-    position: relative;
-    background-color: purple;
-    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px,
-        rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px,
-        rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+    font-size: 1.5vh;
 }
 
 .headshot {
@@ -42,5 +28,13 @@
     .contentText {
         padding: 0 1vw 0;
         width: 75%;
+    }
+
+    .container {
+        gap: 2vw;
+    }
+
+    .contentText {
+        font-size: 1.5vw;
     }
 }
