--- a/styles/resets.scss
+++ b/styles/resets.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 1.25vw;
+  font-size: 1.35vw;
 }
 
 a {
@@ -16,6 +16,9 @@ a {
   box-sizing: border-box;
 }
 
-Link:hover {
-  text-decoration: none;
+@media screen and (max-width: 600px) {
+  html,
+  body {
+    font-size: 2.25vh;
+  }
 }
