--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -12,7 +12,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #0087ca;
+  background-color: #0583d2;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
