--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,23 +1,7 @@
-// animations for navbar underline
-.resume {
-  display: inline-block;
-  position: relative;
+.resume:hover {
+  //   color: #11468f;
 }
 
-.resume:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #0583d2;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
-
-.resume:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+.iconBar > *:hover {
+  color: #11468f;
 }
