--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("http://fonts.googleapis.com/css?family=Merriweather&#8217");
+
 * {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: "Merriweather", Georgia;
+}
+
+.font-primary {
+	font-family: "Merriweather", Georgia;
+}
+
+.font-secondary {
+	font-family: Raleway, sans-serif;
 }
 
 a {
@@ -15,10 +25,10 @@ a {
 }
 
 .section-container {
-	width: 95vw;
+	width: 85vw;
 	box-sizing: content-box;
 	padding: 0;
-	margin: 0;
+	margin-bottom: 8rem;
 }
 
 .project-button:hover {
@@ -36,8 +46,50 @@ a {
 
 .project-text {
 	visibility: hidden;
+	backdrop-filter: blur(5px);
+	background-color: rgba(255, 255, 255, 0.5);
+	width: 100%;
+	height: 100%;
+}
+
+.project-backdrop {
+	background-position: center center;
+	background-size: 16rem auto;
+	background-repeat: no-repeat;
 }
 
 .project-backdrop:hover .project-text {
 	visibility: visible;
+	max-height: 90vh;
+}
+
+.experience-backdrop {
+	height: 28rem;
+	background-position: center center;
+	background-size: 16rem auto;
+	background-repeat: no-repeat;
+}
+
+.experience-text {
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
+	backdrop-filter: blur(5px);
+	background-color: rgba(255, 255, 255, 0.5);
+	visibility: hidden;
+}
+
+.experience-backdrop:hover .experience-text {
+	visibility: visible;
+}
+
+li {
+	list-style-type: circle;
+	margin-left: 2rem;
+}
+
+.experiences {
+	display: flex;
+	flex-direction: column;
+	gap: 8rem;
 }
