--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 @import url("http://fonts.googleapis.com/css?family=Merriweather&#8217");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,700&family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,800;1,700&family=Raleway&display=swap");
 
 * {
 	padding: 0;
@@ -47,7 +49,7 @@ a {
 }
 
 .project-button:hover {
-	font-weight: 500;
+	font-weight: 700;
 }
 
 .project-text {
