--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,140 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
-@import url("http://fonts.googleapis.com/css?family=Merriweather&#8217");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,700&family=Raleway&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,800;1,700&family=Raleway&display=swap");
+@import url('navbar.css');
 
 * {
 	padding: 0;
 	margin: 0;
-	font-family: "Merriweather", Georgia;
-	font-size: 11px;
-}
-
-.font-primary {
-	font-family: "Merriweather", Georgia;
-}
-
-.font-secondary {
-	font-family: Raleway, sans-serif;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-/* GENERAL */
-
-.section-container {
-	width: 85vw;
-	margin-bottom: 4rem;
-}
-
-.text-header-adj {
-	font-size: 2.5rem;
-}
-
-/* PROJECTS PAGE */
-.project-section-1 {
-	display: grid;
-	gap: 2rem;
-	grid-template-areas:
-		"a"
-		"b"
-		"c";
-}
-
-.project-button:hover {
-	font-weight: 700;
-}
-
-.project-text {
-	backdrop-filter: blur(5px);
-	background-color: rgba(255, 255, 255, 0.5);
-	width: 100%;
-	height: 100%;
-}
-
-.project-backdrop {
-	background-position: center center;
-	background-size: 16rem auto;
-	background-repeat: no-repeat;
-}
-
-/* EXPERIENCES PAGE */
-.experience-backdrop {
-	background-position: center center;
-	background-size: 16rem auto;
-	background-repeat: no-repeat;
-}
-
-.company-demographic {
-	display: none;
-}
-
-.experience-text {
-	display: flex;
-	flex-direction: column;
-	padding: 2rem;
-	backdrop-filter: blur(5px);
-	background-color: rgba(255, 255, 255, 0.5);
-}
-
-li {
-	list-style-type: circle;
-	margin-left: 2rem;
-}
-
-.experiences {
-	display: flex;
-	flex-direction: column;
-	gap: 4rem;
-}
-
-@media only screen and (min-width: 960px) {
-	/* GENERAL */
-	.text-header-adj {
-		font-size: 4rem;
-	}
-
-	/* PROJECTS */
-	.project-section-1 {
-		grid-template-columns: 1fr 1fr;
-		grid-template-areas:
-			"a b"
-			"a c";
-		height: "90vh";
-	}
-
-	.project-text {
-		visibility: hidden;
-	}
-
-	.project-backdrop:hover .project-text {
-		visibility: visible;
-	}
-
-	/* EXPERIENCE PAGE */
-	.company-demographic {
-		display: inline-block;
-	}
-
-	.experience-text {
-		visibility: hidden;
-	}
-
-	.experience-backdrop:hover .experience-text {
-		visibility: visible;
-	}
-
-	.experience-backdrop {
-		height: 28rem;
-	}
-
-	.experiences {
-		gap: 8rem;
-	}
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 12px;
 }
