--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,19 +1,23 @@
 .navbar-container {
-	width: 100%;
 	border-bottom: solid 1px black;
+	background-color: white;
 
 	display: flex;
-	gap: 2rem;
+	gap: 4rem;
 	align-items: center;
-	justify-content: start;
+	justify-content: flex-start;
 
 	padding: 0 2rem 0 2rem;
+	width: 100%;
+	height: 4rem;
+
+	position: sticky;
+	z-index: 100;
+	top: 0;
 }
 
 .navbar-container > .nav-item {
 	display: inline-block;
-
-	padding: 1rem 0 1rem 0;
 }
 
 .navbar-container > .nav-item:last-child {
