--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,14 +1,6 @@
 .landing-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 	align-items: flex-start;
-
-	height: 90vh;
-	width: 100%;
-
-	padding: 4rem 4rem 4rem 4rem;
-	position: relative;
+	padding: 4rem 2rem 4rem 2rem;
 }
 
 #black-offset {
@@ -44,7 +36,7 @@
 }
 
 .social-box {
-	border: 1px black solid;
+	outline: 1px solid black;
 	height: 100%;
 
 	display: flex;
